feat(tags): add get endpoints
